
  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6577. MR AM unable to load native library without
    MR_AM_ADMIN_USER_ENV set (sjlee)

    MAPREDUCE-5982. Task attempts that fail from the ASSIGNED state can
    disappear (Chang Li via jlowe)

    MAPREDUCE-6492. AsyncDispatcher exit with NPE on
    TaskAttemptImpl#sendJHStartEventForAssignedFailTask (Bibin A Chundatt via
    jlowe)

Release 2.6.3 - 2015-12-17

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6273. HistoryFileManager should check whether summaryFile exists to 
    avoid FileNotFoundException causing HistoryFileInfo into MOVE_FAILED state.
    (zhihai xu via devaraj)

    MAPREDUCE-6528. Memory leak for HistoryFileManager.getJobSummary()
    (Junping Du via jlowe)

    MAPREDUCE-6377. JHS sorting on state column not working in webUi.
    (zhihai xu via devaraj)

    MAPREDUCE-5948. org.apache.hadoop.mapred.LineRecordReader does not handle
    multibyte record delimiters well (Vinayakumar B, Rushabh Shah, and Akira
    AJISAKA via jlowe)

    MAPREDUCE-6481. LineRecordReader may give incomplete record and wrong
    position/key information for uncompressed input sometimes. (Zhihai Xu via
    jlowe)

    MAPREDUCE-5883. "Total megabyte-seconds" in job counters is slightly
    misleading (Nathan Roberts via jlowe)

    MAPREDUCE-6549. multibyte delimiters with LineRecordReader cause 
    duplicate records (wilfreds via rkanter)

Release 2.6.2 - 2015-10-28

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6454. Fixed MapReduce to modify HADOOP_CLASSPATH to have distributed
    cache files so that child processes running hadoop scripts can access these
    files. (Junping Du via vinodkv)

    MAPREDUCE-6497. Fix wrong value of JOB_FINISHED event in
    JobHistoryEventHandler. (Shinichi Yamashita via aajisaka)

Release 2.6.1 - 2015-09-23

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS